--- a/eureka/pom.xml
+++ b/eureka/pom.xml
@@ -6,7 +6,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>eureka</artifactId>
-
+    <version>2.2</version>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
